name:                useless
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/useless#readme
license:             MIT
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable useless-exe
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , scotty
                     , aeson
                     , time
                     , text
                     , transformers
                     , unix
  default-language:    Haskell2010
  default-extensions:   OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/githubuser/useless
